--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
    <!--- <script defer src="barchart.js"></script> -->
   <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
   <!--<script src="https://d3js.org/d3.v3.js"></script>-->
-  <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="//d3js.org/topojson.v1.min.js"></script>
-  <script src="https://unpkg.com/topojson@3"></script>
+  <script defer src="https://d3js.org/d3.v4.min.js"></script>
+  <script defer src="//d3js.org/topojson.v1.min.js"></script>
+  <script defer src="https://unpkg.com/topojson@3"></script>
     <!-- Your code -->
     <script defer src="script.js"></script>
     
